# axum-codec

./: .release.json  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
examples/: aide.rs  basic.rs
examples/aide-validator/: Cargo.toml
examples/aide-validator/src/: main.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/todo-api/: Cargo.toml
examples/todo-api/src/: main.rs  todo.rs
macros/: Cargo.toml  README.md
macros/src/: apply.rs  attr_parsing.rs  debug_handler.rs  lib.rs  with_position.rs
src/: content.rs  decode.rs  encode.rs  extract.rs  handler.rs  lib.rs  macros.rs  main.rs  rejection.rs  response.rs  routing.rs
