[package]
name = "axum-codec-macros"
version = "0.0.2"
edition = "2021"
description = "Procedural macros for axum-codec"
license = "MIT OR Apache-2.0"
authors = ["Matthew Polak <contact@matteopolak.com>"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "2"

[features]
bincode = []
bitcode = []
serde = []

