[package]
name = "axum-codec-macros"
version = "0.0.6"
edition = "2021"
description = "Procedural macros for axum-codec"
license = "MIT OR Apache-2.0"
authors = ["Matthew Polak <contact@matteopolak.com>"]
repository = "https://github.com/matteopolak/axum-codec"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", optional = true }

[features]
bincode = ["dep:syn"]
bitcode = ["dep:syn"]
serde = ["dep:syn"]
aide = ["dep:syn"]
validator = ["dep:syn"]

